# uv-template

./: README.md  cookiecutter.json
{{cookiecutter.program_name}}/: README.md  pyproject.toml
{{cookiecutter.program_name}}/{{cookiecutter.program_name}}/: __main__.py
{{cookiecutter.program_name}}/{{cookiecutter.program_name}}/commands/: __init__.py  command1.py  command2.py
