[project]
name = "{{cookiecutter.program_name}}"
version = "0.1.0"
description = ""
authors = [
    {name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=12.5.1",
    "typer>=0.6.1",
]

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github}}/{{cookiecutter.program_name}}"
Repository = "https://github.com/{{cookiecutter.github}}/{{cookiecutter.program_name}}"

[project.scripts]
{{cookiecutter.program_name}} = "{{cookiecutter.program_name}}.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.0.235",
    "pytest>=7.2.1",
    "pre-commit>=3.0.1",
]
